--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="public/Munich-Landscape-logo-Black1__2_-removebg-preview-1.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Munich-Motors</title>
   </head>
   <body>
     <div id="root"></div>
